Fixing the background fit on Mobile

--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,11 @@
+html,
+body {
+  min-height: 100%;
+}
 body {
   background-image: url("../images/body-background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100%;
 }
 .container {
   margin: 80px auto;
